tests/paczka2/big_fuzzy/50306430.err
Error in line 2: SjLAuvljISr S856 1,8
Error in line 4: SjLAuvljISr A727 2,1
Error in line 6: cNFu S166 23,7
Error in line 15: 2yna S166 19,4
Error in line 24: SjLAuvljISr S166 -3,9
Error in line 25: 2yna S166 0,53
Error in line 32: cNFu A727 0,3
Error in line 29: 2yna S166 87,2
Error in line 28: ZnwE6 S166 21,6
Error in line 41: SjLAuvljìSr A727 81,2
Error in line 34: 2yna A727 47,8
Error in line 46: 2yna A137 88,3
Error in line 59: cNFu A137 -3,4
Error in line 68: Xd3hA8f A727 247,6
Error in line 39: SjLAuvljISr A727 48,6
Error in line 83: SjLAuvljISr S856 72,0
Error in line 61: ZnwE6 S856 197,1
Error in line 86: ZnwE6 S166 45,4
Error in line 81: 8Cs5PQt0QH A727 46,4
Error in line 89: ZnwE6 A727 48,7
Error in line 96: ZnwE6 A137 96,4
Error in line 109: Xd3hA8f A137 94,2
Error in line 90: 8Cs5PQt0QH A137 82,4
Error in line 124: S166 S856 36,2
Error in line 138: 8Cs5PQt0QH S166 72,2
Error in line 147: S166 A727 74,1
Error in line 152: cNFu S856 54,1
Error in line 149: 8Cs5PQt0QH A137 94,9
Error in line 159: Xd3hA8f S166 41,0
Error in line 158: 8Cs5PQt0QH A727 71,6
Error in line 162: 8Cs5PQt0QH S166 47,8
Error in line 175: Xd3hA8f A727 51,4
Error in line 177: SjLAuvljISr S856 48,9
Error in line 178: Xd3hA8f A137 84,7
Error in line 180: S166 A727 25,3
Error in line 181: Xd3hA8f S166 93,8
Error in line 189: ZnwE6 S856 21,5
Error in line 186: Xd3hA8f A137 371,7
Error in line 198: Xd3hA8f A727 69,0
Error in line 209: S166 A137 38,2
Error in line 206: cNFu S856 34,9
Error in line 207: 8Cs5PQt0QH A137 81,5
Error in line 217: 2yna S856 46,1
Error in line 220: Xd3hA8f A727 29,5
Error in line 228: SjLAuvljISr S856 4,7
Error in line 236: S166 A727 37,9
Error in line 233: SjLAuvljISr A137 92,0
Error in line 237: S166 A137 13,0
Error in line 247: SjLAuvljISr S166 26,6
